src/table/table.scss
@import '../style/index.scss';

@include block(vc-table) {
	position: relative;
	overflow: hidden;
	box-sizing: border-box;
	flex: 1;
	width: 100%;
	max-width: 100%;
	background-color: #fff;
	font-size: 12px;
	color: #515151;

	// 数据为空
	@include element(empty-block) {
		min-height: 60px;
		text-align: center;
		width: 100%;
		height: 100%;
		display: flex;
		justify-content: center;
		align-items: center;
	}

	@include element(empty-text) {
		line-height: 60px;
		width: 50%;
		color: #909399;
	}

	// 展开行
	@include element(expand-column) {
		.vc-table__cell {
			padding: 0;
			text-align: center;
		}
	}

	@include element(expand-icon) {
		display: inline-block;
		color: #666;
		font-size: 12px;
		line-height: 23px;
		height: 23px;
		width: 20px;
		cursor: pointer;
		.vc-icon {
			transform: rotate(90deg);
			transition: transform 0.2s ease-in-out;
		}
		@include when(expand) {
			.vc-icon {
				transform: rotate(180deg);
			}
		}
	}

	@include element(expanded-cell) {
		background-color: #fff;

		// 纯属为了增加权重
		&[class*=cell] {
			padding: 20px 50px;
		}

		&:hover {
			background-color: transparent !important;
		}
	}

	@include element(placeholder) {
		display: inline-block;
		width: 20px;
	}

	@include modifier(fit) {
		border-right: 0;
		border-bottom: 0;

		th.gutter, td.gutter {
			border-right-width: 1px;
		}
	}

	@include modifier(scrollable-x) {
		.vc-table__body-wrapper {
			overflow-x: auto;
		}
	}

	@include modifier(scrollable-y) {
		.vc-table__body-wrapper {
			overflow-y: auto;
		}
	}

	thead {
		font-weight: 500;

		&.is-group {
			th {
				background: #f9f9f9;
			}
		}
	}

	th, td {
		padding: 12px 0;
		min-width: 0;
		box-sizing: border-box;
		text-overflow: ellipsis;
		vertical-align: middle;
		position: relative;
		text-align: left;

		@include when(center) {
			text-align: center;
		}

		@include when(right) {
			text-align: right;
		}

		&.gutter {
			width: 15px;
			border-right-width: 0;
			border-bottom-width: 0;
			padding: 0;
		}

		&.is-hidden {
			> * {
				visibility: hidden;
			}
		}
	}

	@include modifier(medium) {
		th, td {
			padding: 10px 0;
		}
	}

	@include modifier(small) {
		font-size: 12px;
		th, td {
			padding: 8px 0;
		}
	}

	@include modifier(mini) {
		font-size: 12px;
		th, td {
			padding: 6px 0;
		}
	}

	tr {
		background-color: #fff;

		input[type="checkbox"] {
			margin: 0;
		}
	}

	th.is-leaf, td {
		border-bottom: 1px solid #d9d9d9;
	}

	td {
		&:first-child {
			padding-left: 12px;
		}
		&:last-child {
			padding-right: 12px;
		}
	}

	th.is-sortable {
		cursor: pointer;
	}

	th {
		white-space: nowrap;
		overflow: hidden;
		user-select: none;
		background-color: #fff;
		padding: 7px 0;
		border-top: 1px solid #d9d9d9;
		border-bottom: 1px solid #d9d9d9;
		&:first-child {
			padding-left: 12px;
			border-left: 1px solid #d9d9d9;
		}
		&:last-child {
			padding-right: 12px;
			border-right: 1px solid #d9d9d9;
		}

		div {
			display: inline-block;
			padding-left: 10px;
			padding-right: 10px;
			line-height: 40px;
			box-sizing: border-box;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
		}

		> .vc-table__cell {
			position: relative;
			word-wrap: normal;
			text-overflow: ellipsis;
			display: inline-block;
			vertical-align: middle;
			width: 100%;
			box-sizing: border-box;

			&.highlight {
				color: #409eff;
			}
		}

		&.required > div::before {
			display: inline-block;
			content: "";
			width: 8px;
			height: 8px;
			border-radius: 50%;
			background: #ff4d51;
			margin-right: 5px;
			vertical-align: middle;
		}
	}

	.vc-table__cell {
		box-sizing: border-box;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: normal;
		word-break: break-all;
		line-height: 23px;
		padding-left: 10px;
		padding-right: 10px;

		&.vc-popover {
			white-space: nowrap;
			min-width: 50px;
		}
	}

	// 拥有多级表头
	@include modifier((group, border)) {
		border: 1px solid #ebeef5;

		@include share-rule(border-pseudo) {
			content: "";
			position: absolute;
			background-color: #ebeef5;
			z-index: 1;
		}

		// 表格右部伪 border
		&::after {
			@include extend-rule(border-pseudo);
			top: 0;
			right: 0;
			width: 1px;
			height: 100%;
		}
	}

	// 表格底部伪 border，总是有的
	&::before {
		@include extend-rule(border-pseudo);
		left: 0;
		bottom: 0;
		width: 100%;
		height: 1px;
	}

	// table--border
	@include modifier(border) {
		border-right: none;
		border-bottom: none;

		&.vc-loading-parent--relative {
			border-color: transparent;
		}

		th, td {
			border-right: 1px solid #ebeef5;

			&:first-child .vc-table__cell {
				padding-left: 10px;
			}
		}

		th.gutter:last-of-type {
			border-bottom: 1px solid #ebeef5;
			border-bottom-width: 1px;
		}

		& th {
			border-bottom: 1px solid #ebeef5;
		}
	}

	@include modifier(hidden) {
		visibility: hidden;
	}

	@include element((fixed, fixed-right)) {
		position: absolute;
		top: 0;
		left: 0;
		overflow-x: hidden;
		overflow-y: hidden;
		box-shadow: 0 0 10px rgba(0, 0, 0, 0.12);

		&::before {
			content: "";
			position: absolute;
			left: 0;
			bottom: 0;
			width: 100%;
			height: 1px;
			background-color: #ebeef5;
			z-index: 4;
		}
	}

	@include element(fixed-right-patch) {
		position: absolute;
		top: -1px;
		right: 0;
		background-color: #fff;
		border-bottom: 1px solid #ebeef5;
	}

	@include element(fixed-right) {
		top: 0;
		left: auto;
		right: 0;

		.vc-table__fixed-header-wrapper,
		.vc-table__fixed-body-wrapper,
		.vc-table__fixed-footer-wrapper {
			left: auto;
			right: 0;
		}
	}

	@include element(fixed-header-wrapper) {
		position: absolute;
		left: 0;
		top: 0;
		z-index: 3;
	}

	@include element(fixed-footer-wrapper) {
		position: absolute;
		left: 0;
		bottom: 0;
		z-index: 3;

		& tbody td {
			border-top: 1px solid #ebeef5;
			background-color: #f9f9f9;
			color: #606266;
		}
	}

	@include element(fixed-body-wrapper) {
		position: absolute;
		left: 0;
		top: 37px;
		overflow: hidden;
		z-index: 3;
	}

	@include element((header-wrapper, body-wrapper, footer-wrapper)) {
		width: 100%;
	}

	@include element(footer-wrapper) {
		margin-top: -1px;
		td {
			border-top: 1px solid #ebeef5;
		}
	}

	@include element((header, body, footer)) {
		table-layout: fixed;
		border-collapse: separate;
	}

	@include element(header) {
		thead tr th {
			background-color: #f4f4f4;
			color: #000;
		}
	}
	@include element((header-wrapper, footer-wrapper)) {
		overflow: hidden;

		& tbody td {
			background-color: #f9f9f9;
			color: #606266;
		}
	}

	@include element(body-wrapper) {
		overflow: hidden;
		position: relative;

		@include when(scrolling-none) {
			~ .vc-table__fixed,
			~ .vc-table__fixed-right {
				box-shadow: none;
			}
		}

		@include when(scrolling-left) {
			~ .vc-table__fixed {
				box-shadow: none;
			}
		}

		@include when(scrolling-right) {
			~ .vc-table__fixed-right {
				box-shadow: none;
			}
		}

		.vc-table--border {
			@include when(scrolling-right) {
				~ .vc-table__fixed-right {
					border-left: 1px solid #ebeef5;
				}
			}

			@include when(scrolling-left) {
				~ .vc-table__fixed {
					border-right: 1px solid #ebeef5;
				}
			}
		}
	}

	.caret-wrapper {
		display: inline-flex;
		flex-direction: column;
		align-items: center;
		height: 34px;
		width: 24px;
		vertical-align: middle;
		cursor: pointer;
		overflow: initial;
		position: relative;
	}

	.vc-table__hidden {
		visibility: hidden;
		position: absolute;
		z-index: -1;
	}

	@include modifier(striped) {
		& .vc-table__body {
			& tr.vc-table__row--striped {
				td {
					background: #fafafa;
				}

				&.current-row td {
					background: #f9f9f9;
				}
			}
		}
	}

	@include element(body) {
		tr.hover-row {
			&, &.vc-table__row--striped {
				&, &.current-row {
					> td {
						background: #f9f9f9;
					}
				}
			}
		}

		tr.current-row > td {
			background: #f9f9f9;
		}
	}

	@include element(column-resize-proxy) {
		position: absolute;
		left: 200px;
		top: 0;
		bottom: 0;
		width: 0;
		border-left: 1px solid #ebeef5;
		z-index: 10;
	}

	@include modifier(enable-row-transition) {
		.vc-table__body td {
			transition: background-color 0.25s ease;
		}
	}

	@include modifier(enable-row-hover) {
		.vc-table__body tr:hover > td {
			background-color: #f9f9f9;
		}
	}

	@include modifier(fluid-height) {
		.vc-table__fixed,
		.vc-table__fixed-right {
			bottom: 0;
			overflow: hidden;
		}
	}

	[class*=vc-table__row--level] {
		.vc-table__expand-icon {
			display: inline-block;
			width: 20px;
			line-height: 20px;
			height: 20px;
			text-align: center;
			margin-right: 3px;
		}
	}
}

// border 下去掉边框
.vc-table.vc-table--border th {
	border-top: none;
	&:first-child {
		border-left: none;
	}
}

.vc-table-column--selection .vc-table__cell {
	padding-left: 14px;
	padding-right: 14px;
}

